added quiz controller and implemented the logic of Get All quiz